--- a/sb48/index.html
+++ b/sb48/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Welcome</title>
+    <title>Super Bowl 48: Half Time Report</title>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -13,9 +13,10 @@
 </script>
   </head>
   <body>
-<ul>
-   <li><a href="/sb48">Super Bowl 48: Half Time Report</a></li>
-</ul>
-
+    <h1>Super Bowl 48: Half Time Report</h1>
+    <h2>Summary</h2>
+    <ul>
+     <li>
+    </ul>
   </body>
 </html
