Add pics and content

--- a/sb48/index.html
+++ b/sb48/index.html
@@ -13,10 +13,37 @@
 </script>
   </head>
   <body>
-    <h1>Super Bowl 48: Half Time Report</h1>
+    <h1>Super Bowl 48: Half Time Twitter Report</h1>
+    <h2>Background</h2>
+    <p>Tweets were processed between <strong>17:04:45 - 17:48:59 PST</strong> for term <strong>superbowl</strong> from <strong>geo coordinates</strong> -74.10,40.81,-74.08,40.84 (East Rutherford)<p>
     <h2>Summary</h2>
     <ul>
-     <li>
+     <li>20,753 tweets from 19,398 people</li>
+     <li>9,112 RT (~ 44%)</li>
+     <li>@JerrySeinfeld , @MTV & @VEVO lead the leader board (driven by mentions)</li>
+     <li>Most of the users did not have a timezone set on their profile></li>
+     <li>Top 3 mentions during this time period were @BrunoMars, @SuperBowl & @Dory</li>
+     <li>Tweets from iPhone lead the way follewed by Andriod & Web</li>
+     <li>424 people sent tweets twice during this period</li>
     </ul>
+    <h2>Charts</h2>
+    <h3>Leader Board</h3>
+    <img src="./pics/lb.png"/>
+
+    <h3>Mentions</h3>
+    <img src="./pics/mentions.png"/>
+
+    <h3>Source</h3>
+    <img src="./pics/source.png"/>
+
+    <h3>User Timezone</h3>
+    <img src="./pics/tz.png"/>
+
+    <h3>Tweet Frequency</h3>
+    <img src="./pics/tf.png"/>
+
+
+     <h2>Tools</h2>
+     node.js, MongoDB, heroku & github . Questions? Contact <a href="http://twitter.com/harishvc">@harishvc</a>
   </body>
 </html
