--- a/sb48/index.html
+++ b/sb48/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Super Bowl 48: Half Time Report</title>
+    <title>Super Bowl 48: Half Time Twitter Report</title>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
