--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
-<html>
-  <head>
-    <title>Welcome</title>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+---
+layout: default
+title: Connecting Dots & Making a difference
+date: 2014-02-02 22:18:49
+---
 
-  ga('create', 'UA-47735548-1', 'harishvc.github.io');
-  ga('send', 'pageview');
-
-</script>
-  </head>
-  <body>
-<ul>
-   <li><a href="/sb48">Super Bowl 48: Half Time Report</a></li>
-</ul>
-
-  </body>
-</html
+<div class="content">
+  <h1>Blog Post Listing</h1>
+  <ul>
+    {% for post in site.posts %}
+      <li>
+         <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+          <p>{{ post.excerpt }}</p>
+       </li>
+    {% endfor %}
+  </ul>
+</div>
