CSS & Blog title change

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Connecting Dots & Making a difference
+title: Making Connections & Getting Creative
 date: 2014-02-02 22:18:49
 ---
 
 <div class="content">
-  <h1>Blog Post Listing</h1>
+  <h1>Listing</h1>
   <ul>
     {% for post in site.posts %}
       <li>
