Link to blog home page

--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
 <html>
-   <head><meta http-equiv="refresh" content="0;url=http://harishvc.github.io/404/index.html" /></head>
-   <body>oops!</body>
+   <head><meta http-equiv="refresh" content="10;url=http://harishvc.github.io/" /></head>
+   <body><p>Opps! The page you are looking for does not exist. Redirecting to home page!</p></body>
 </html>
