--- a/index.html
+++ b/index.html
@@ -44,11 +44,8 @@ keywords: "Harish Chakravarthy,@harishvc,#UX,#DataViz,#Analytics"
   {% endif %}
 </div>
 {% endif %}  
-  
-  
-  
-</div>
- </div>
-</div>
-</section>
-</div>
+    
+    </div>  <!-- post -->
+   </div> <!-- span12 -->
+  </section> <!-- section -->
+</div> <!-- container -->
