--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@ keywords: "Harish Chakravarthy,@harishvc,#UX,#DataViz,#Analytics"
     <p>
        <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
       <br/>
-      <img style="float:left; margin:12px;horizontal-align:top" alt="{{ post.excerptimagealt }}" src="{{ post.excerptimage }}"/> {{ post.excerpt }}
+      {% if post.excerptimage %}
+       <img style="float:left; margin:12px;horizontal-align:top" alt="{{ post.excerptimagealt }}" src="{{ post.excerptimage }}"/> 
+      {% endif %}
+      {% if post.faexcerptimage %}
+       <i class="fa {{ post.faexcerptimage }} fa-3x"></i> 
+      {% endif %}
+      {{ post.excerpt }}
     </p>
     <div style="clear:both"></div><hr/>
   {% endfor %}
